<resources>
    <string name="app_name">Uber: Borrow</string>
    <string name="email_hint">Enter your email</string>
    <string name="name_hint">Enter your name</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_button_text">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="renter_message">Enter your car\'s information</string>
    <string name="car_make_hint">Car\'s make</string>
    <string name="car_model_hint">Car Model</string>
    <string name="car_year_hint">Car year</string>
    <string name="car_caolor_hint">Car Caolor</string>
    <string name="available_begining_hint">Available beginning…</string>
    <string name="return_by_hint">Return By</string>
    <string name="future_content_message">More content later</string>
    <string name="start_rent_button">Start Rent</string>
    <string name="title_activity_google">Map</string>
</resources>
