<?xml version="1.0" encoding="utf-8"?>
<helpme_productions.com.uberborrow.ribs.root.logged_in.renter.RenterView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/renter_message"
        />
    <EditText
        android:id="@+id/etCarMake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:inputType="text"
        android:hint="@string/car_make_hint"/>


    <EditText
        android:id="@+id/etCarModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:inputType="text"
        android:hint="@string/car_model_hint"/>

    <EditText
        android:id="@+id/etCarYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:inputType="text"
        android:hint="@string/car_year_hint"/>

    <EditText
        android:id="@+id/etCarColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:inputType="text"
        android:hint="@string/car_caolor_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/etAvailableStart"
            android:layout_width="200sp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:hint="@string/available_begining_hint"/>
        <EditText
            android:id="@+id/etAvailableEnd"
            android:layout_width="200sp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:hint="@string/return_by_hint"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/future_content_message"
        />

    <Button
        android:id="@+id/btnStartRent"
        android:text="@string/start_rent_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"/>


</helpme_productions.com.uberborrow.ribs.root.logged_in.renter.RenterView>